--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "crewai>=0.86.0",
+    "crewai==0.61.0",
     "groq>=0.13.0",
     "python-dotenv>=1.0.1",
     "streamlit>=1.41.1",
