--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ requires-python = ">=3.12"
 dependencies = [
     "crewai==0.61.0",
     "groq>=0.13.0",
+    "install",
+    "pip",
+    "pysqlite3",
     "python-dotenv>=1.0.1",
     "streamlit>=1.41.1",
     "tiktoken>=0.7.0",
